--- a/src/main/resources/templates/patient_additions/anamnesis-form.html
+++ b/src/main/resources/templates/patient_additions/anamnesis-form.html
@@ -26,7 +26,7 @@
             <!---->
             <div class="row fs-5">
                 <div class="col-12">
-                    <form action="#" method="post" id="anamnesis-form">
+                    <form action="#" th:action="@{/rest/anamnesis/add}" method="post" id="anamnesis-form">
                         <div class="mb-5">
                             <h4 class="fs-4">Имеются ли у вас врождённые пороки сердца?</h4>
                             <div class="form-check form-check-inline" th:each="each : ${trueFalse}">
