--- a/src/main/resources/templates/users/modal/employee-info-editing-modal.html
+++ b/src/main/resources/templates/users/modal/employee-info-editing-modal.html
@@ -18,7 +18,7 @@
                                 <span class="my-auto">Заполняемый текст</span>
                             </div>
                         </div>
-                        <form id="employee-info-editing-form" action="#" class="border rounded text-secondary fs-5 p-3">
+                        <form id="employee-info-editing-form" action="#" th:action="@{/rest/user-profile/edit/employee-info}" method="post" class="border rounded text-secondary fs-5 p-3">
                             <input type="hidden" name="id" th:value="${user.employeeInformation.id}" />
                             <div class="mb-4">
                                 <label for="post" class="form-label">Должность</label>
