--- a/src/main/resources/templates/users/modal/patient-inactivity-modal.html
+++ b/src/main/resources/templates/users/modal/patient-inactivity-modal.html
@@ -18,7 +18,7 @@
                                 <span class="my-auto">Заполняемый текст</span>
                             </div>
                         </div>
-                        <form id="patient-inactivity-form" action="#" class="border rounded text-secondary fs-5 p-3">
+                        <form id="patient-inactivity-form" action="#" th:action="@{/rest/inactivity/add/patient-inactivity}" method="post" class="border rounded text-secondary fs-5 p-3">
                             <input type="hidden" name="patient-inactivity-to-whom-id" th:value="${user.id}" />
                             <div class="mb-3">
                                 <label for="patient-inactivity-patient" class="form-label">Пациент</label>
