--- a/src/main/resources/templates/indicators/forms/walk-test-form.html
+++ b/src/main/resources/templates/indicators/forms/walk-test-form.html
@@ -18,7 +18,7 @@
         <!---->
         <div class="container text-secondary my-5">
             <!---->
-            <form action="#" method="post" id="walk-test-form" class="fs-6">
+            <form action="#" th:action="@{/rest/indicators/add/walk-test}" method="post" id="walk-test-form" class="fs-6">
                 <!---->
                 <div class="row mb-5">
                     <div class="col-12">
