--- a/src/main/resources/templates/indicators/forms/analysis-file-form.html
+++ b/src/main/resources/templates/indicators/forms/analysis-file-form.html
@@ -26,7 +26,7 @@
             <!---->
             <div class="row fs-5">
                 <div class="col-12">
-                    <form action="#" method="post" id="file-form" name="file-form">
+                    <form action="#" th:action="@{/rest/indicators/add/analysis-file/any}" method="post" id="file-form" name="file-form">
                         <div class="d-flex flex-row mb-1">
                             <div class="flex-grow-1 me-1">
                                 <label for="file" class="form-label">Файл</label>
