--- a/src/main/resources/templates/indicators/forms/liquid-form.html
+++ b/src/main/resources/templates/indicators/forms/liquid-form.html
@@ -26,7 +26,7 @@
             <!---->
             <div class="row fs-5">
                 <div class="col-12">
-                    <form action="#" method="post" id="liquid-form">
+                    <form action="#" th:action="@{/rest/indicators/add/liquid}" method="post" id="liquid-form">
                         <div class="col-12 col-md-8 col-lg-4 mb-5">
                             <label for="liquid" class="form-label fw-semibold fs-4">Количество жидкости в день (л)</label>
                             <input type="number" step="0.01" name="liquid" id="liquid" class="form-control" placeholder="3.5" />
