--- a/src/main/resources/templates/indicators/forms/overall-health-form.html
+++ b/src/main/resources/templates/indicators/forms/overall-health-form.html
@@ -26,7 +26,7 @@
             <!---->
             <div class="row fs-5">
                 <div class="col-12">
-                    <form action="#" method="post" id="overall-health-form">
+                    <form action="#" th:action="@{/rest/indicators/add/overall-health}" method="post" id="overall-health-form">
                         <div class="mb-5">
                             <h4 class="fs-4">Одышка</h4>
                             <div class="form-check form-check-inline" th:each="each : ${conditions}">
