--- a/src/main/resources/templates/indicators/forms/physical-changes-form.html
+++ b/src/main/resources/templates/indicators/forms/physical-changes-form.html
@@ -26,7 +26,7 @@
             <!---->
             <div class="row fs-5">
                 <div class="col-12">
-                    <form action="#" method="post" id="physical-changes-form">
+                    <form action="#" th:action="@{/rest/indicators/add/physical-changes}" method="post" id="physical-changes-form">
                         <div class="mb-5">
                             <h4 class="fs-4">Увеличение живота без переедания</h4>
                             <div class="form-check form-check-inline" th:each="each : ${trueFalse}">
