--- a/src/main/resources/templates/indicators/forms/pressure-form.html
+++ b/src/main/resources/templates/indicators/forms/pressure-form.html
@@ -26,7 +26,7 @@
             <!---->
             <div class="row fs-5">
                 <div class="col-12">
-                    <form action="#" method="post" id="pressure-form">
+                    <form action="#" th:action="@{/rest/indicators/add/pressure}" method="post" id="pressure-form">
                         <div class="mb-5 col-12 col-md-8 col-lg-4">
                             <label for="upper" class="form-label fw-semibold fs-4">Верхнее (мм рт.ст.)</label>
                             <input type="number" name="upper" id="upper" class="form-control" placeholder="120" />
