--- a/src/main/resources/templates/indicators/forms/pulse-oximetry-form.html
+++ b/src/main/resources/templates/indicators/forms/pulse-oximetry-form.html
@@ -26,7 +26,7 @@
             <!---->
             <div class="row fs-5">
                 <div class="col-12">
-                    <form action="#" method="post" id="pulse-oximetry-form">
+                    <form action="#" th:action="@{/rest/indicators/add/pulse-oximetry}" method="post" id="pulse-oximetry-form">
                         <div class="mb-5 col-12 col-md-8 col-lg-4">
                             <label for="oxygenPercentage" class="form-label fw-semibold fs-4">Содержание кислорода в крови (%)</label>
                             <input type="number" step="0.01" name="oxygenPercentage" id="oxygenPercentage" class="form-control" placeholder="98.21" />
