--- a/src/main/resources/templates/indicators/forms/spirometry-form.html
+++ b/src/main/resources/templates/indicators/forms/spirometry-form.html
@@ -26,7 +26,7 @@
             <!---->
             <div class="row fs-5">
                 <div class="col-12">
-                    <form action="#" method="post" id="spirometry-form">
+                    <form action="#" th:action="@{/rest/indicators/add/spirometry}" method="post" id="spirometry-form">
                         <div class="mb-5 col-12 col-md-8 col-lg-4">
                             <label for="vlc" class="form-label fw-semibold fs-4">ЖЕЛ (л)</label>
                             <input type="number" step="0.01" name="vlc" id="vlc" class="form-control" placeholder="6.53" />
