--- a/src/main/resources/templates/indicators/forms/weight-form.html
+++ b/src/main/resources/templates/indicators/forms/weight-form.html
@@ -26,7 +26,7 @@
             <!---->
             <div class="row fs-5">
                 <div class="col-12">
-                    <form action="#" method="post" id="weight-form">
+                    <form action="#" th:action="@{/rest/indicators/add/weight}" method="post" id="weight-form">
                         <div class="col-12 col-md-8 col-lg-4 mb-5">
                             <label for="weight" class="form-label fw-semibold fs-4">Вес (кг)</label>
                             <input type="number" step="0.01" name="weight" id="weight" class="form-control" placeholder="65.34" />
